src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <label>Asset ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Sub_Type__c</fullName>
        <label>Asset Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peripherals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Cords/Strips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry/Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Placards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Space</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>